--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <main class="form-signin">
       <form action="/" method="post">  
         <h1 class="h3 mb-3 fw-normal">CODE</h1>
-    
+        <input type="file"/>
         <textarea name="code" cols="40" rows="5"></textarea>
         <button class="w-100 btn btn-lg btn-primary" type="submit">COMPILAR</button>
       </form>
