--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Document</title>
+      <!-- Bootstrap core CSS -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <link rel="stylesheet" href="css/styles.css">
+  </head>
+  <body class="text-center">
+        <main class="form-signin">
+          <button class="w-50 btn btn-lg btn-primary boton" >COMPILE</button>
+          <textarea class="codeTA" id="code" name="code" cols="70" rows="20"></textarea>
+          <textarea id="result" disabled name="result" cols="70" rows="5"></textarea>
+      </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body class="text-center">
-    <main class="form-signin">
-      <form action="/" method="post"> 
-        <h1 class="h3 mb-3 fw-normal">RESULT</h1>
-        <textarea disabled name="result" cols="70" rows="5"></textarea>
-        <h1 class="h3 mb-3 fw-normal">CODE</h1>
-        <textarea name="code" cols="70" rows="20"></textarea>
-        <button class="w-50 btn btn-lg btn-primary" type="submit" id="bSumit">COMPILE</button>
-      </form>
-    </main>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  
+    <script src="index.js"></script>
+    
+  </body> 
 </html>
