--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,14 @@
   <body class="text-center">
         <main class="form-signin">
           <button class="w-50 btn btn-lg btn-primary boton" >COMPILE</button>
-          <textarea class="codeTA" id="code" name="code" cols="70" rows="20"></textarea>
-          <textarea id="result" disabled name="result" cols="70" rows="5"></textarea>
+          <button id="fileButton">Archivo</button>
+          <textarea class="codeTA " id="code" cols="180" rows="20"></textarea>
+          <textarea id="result" class="redText" cols="180" rows="8" disabled></textarea>
       </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <script src="index.js"></script>
-    
+    <script src="https://kit.fontawesome.com/63a3b2bc4c.js" crossorigin="anonymous"></script>
   </body> 
 </html>
