--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,18 @@
       <!-- Bootstrap core CSS -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link rel="stylesheet" href="css/styles.css">
-  </head>
+  
+      <script src="https://kit.fontawesome.com/dc70ffbeda.js" crossorigin="anonymous"></script>
+    </head>
   <body class="text-center">
         <main class="form-signin">
+          <button id="fileButton" class="btn btn-lg btn-warning btnFile"><i class="fa-solid fa-folder"></i></button>
           <button class="w-50 btn btn-lg btn-primary boton" >COMPILE</button>
-          <button id="fileButton">Archivo</button>
           <textarea class="codeTA " id="code" cols="180" rows="20"></textarea>
           <textarea id="result" class="redText" cols="180" rows="8" disabled></textarea>
       </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
     <script src="index.js"></script>
-    <script src="https://kit.fontawesome.com/63a3b2bc4c.js" crossorigin="anonymous"></script>
   </body> 
 </html>
