--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,6 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Document</title>
       <!-- Bootstrap core CSS -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link rel="stylesheet" href="css/styles.css">
@@ -14,9 +13,13 @@
   <body class="text-center">
         <main class="form-signin">
           <button id="fileButton" class="btn btn-lg btn-warning btnFile"><i class="fa-solid fa-folder"></i></button>
-          <button class="w-50 btn btn-lg btn-primary boton" >COMPILE</button>
-          <textarea class="codeTA " id="code" cols="180" rows="20"></textarea>
-          <textarea id="result" class="redText" cols="180" rows="8" disabled></textarea>
+          <button class="w-50 btn btn-lg btn-success boton font-monospace" >COMPILE</button>
+
+          <p><textarea id='lineCounter' wrap='off' readonly>1.</textarea>
+          <textarea class="codeTA " id="code" wrap="off"></textarea></p>
+          <p class="font-monospace" style="color:rgb(255, 255, 255)">Output</p>
+          <textarea id="result" class="redText" readonly ></textarea>
+          <p class="fst-italic font-monospace" style="color:rgb(255, 255, 255)">                                                         Welcome to TJ Complier 2022</p>
       </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
