--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
           <button class="w-50 btn btn-lg btn-success boton font-monospace" >COMPILE</button>
 
           <p><textarea id='lineCounter' wrap='off' readonly>1.</textarea>
-          <textarea class="codeTA " id="code" wrap="off"></textarea></p>
+          <textarea class="codeTA " id="code" wrap="off" spellcheck="false"></textarea></p>
           <p class="font-monospace" style="color:rgb(255, 255, 255)">Output</p>
           <textarea id="result" class="redText" readonly ></textarea>
-          <p class="fst-italic font-monospace" style="color:rgb(255, 255, 255)">                                                         Welcome to TJ Complier 2022</p>
+          <p class="fst-italic font-monospace" style="color:rgb(255, 255, 255)">Welcome to TJ Compiler 2022</p>
       </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
